# access_violation_repro

./: .gitignore  Cargo.toml  Readme.md
programs/vprog/: Cargo.toml
programs/vprog/src/: lib.rs
programs/vprog/tests/: test_ix_failure.rs
