[workspace]
members = ["programs/*"]
resolver = "2"

[profile.dev]
overflow-checks = true

[profile.release]
lto = "thin"
overflow-checks = true

[profile.release.build-override]
opt-level = 3

[workspace.dependencies]
# Anchor
anchor-lang = { version = "0.29.0" }
anchor-client = { version = "0.29.0" }
anchor-spl = { version = "0.29.0", features = ["dex", "token", "token_2022", "metadata"] }

# Solana
solana-program = "~1.18.22"
solana-client = "~1.18.22"
solana-logger = "~1.18.22"
solana-sdk = "~1.18.22"
solana-program-test = "=1.18.22"
solana-banks-client = "~1.18.22"
solana-banks-interface = "~1.18.22"
solana-address-lookup-table-program = "~1.18.22"
solana-account-decoder = "~1.18.22"
solana-transaction-status = "~1.18.22"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.3", features = ["no-entrypoint"] }

# Serialization/Deserialization
# Override anchor to use borsh with the const-generics feature
# Allows to borsh serialize arrays of any length
borsh = { version = "0.10.3", features = ["const-generics"] }
bytemuck = { version = "1.4.0", features = ["min_const_generics", "derive"] }

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

[patch.crates-io]
solana-program-test = { git = "https://github.com/Kamino-Finance/agave.git", branch = "anchor_0.29_compat/1.18.22" }
